---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/macros.rs
input_file: c2rust-transpile/tests/snapshots/macros.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
extern "C" {
    fn __errno_location() -> *mut std::ffi::c_int;
    fn extern_fn() -> std::ffi::c_int;
}
pub type uintptr_t = usize;
#[derive(Copy, Clone)]
#[repr(C)]
pub struct S {
    pub i: std::ffi::c_int,
}
pub type U64 = std::ffi::c_ulonglong;
#[derive(Copy, Clone)]
#[repr(C)]
pub struct fn_ptrs {
    pub v: *mut std::ffi::c_void,
    pub fn1: Option<unsafe extern "C" fn() -> std::ffi::c_int>,
    pub fn2: Option<unsafe extern "C" fn(std::ffi::c_int) -> std::ffi::c_int>,
}
pub type zstd_platform_dependent_type = std::ffi::c_long;
pub const UINTPTR_MAX: std::ffi::c_ulong = unsafe { 18446744073709551615 as std::ffi::c_ulong };
pub const true_0: std::ffi::c_int = unsafe { 1 as std::ffi::c_int };
pub const LITERAL_INT: std::ffi::c_int = unsafe { 0xffff as std::ffi::c_int };
pub const LITERAL_BOOL: std::ffi::c_int = unsafe { true_0 };
pub const LITERAL_FLOAT: std::ffi::c_double = unsafe { 3.14f64 };
pub const LITERAL_CHAR: std::ffi::c_int = unsafe { 'x' as i32 };
pub const LITERAL_STR: [std::ffi::c_char; 6] =
    unsafe { *::core::mem::transmute::<&[u8; 6], &[std::ffi::c_char; 6]>(b"hello\0") };
pub const LITERAL_STRUCT: S = unsafe {
    {
        let mut init = S {
            i: 5 as std::ffi::c_int,
        };
        init
    }
};
pub const NESTED_INT: std::ffi::c_int = unsafe { LITERAL_INT };
pub const NESTED_BOOL: std::ffi::c_int = unsafe { 1 as std::ffi::c_int };
pub const NESTED_FLOAT: std::ffi::c_double = unsafe { LITERAL_FLOAT };
pub const NESTED_CHAR: std::ffi::c_int = unsafe { 'x' as i32 };
pub const NESTED_STR: [std::ffi::c_char; 6] =
    unsafe { *::core::mem::transmute::<&[u8; 6], &[std::ffi::c_char; 6]>(b"hello\0") };
pub const NESTED_STRUCT: S = unsafe {
    {
        let mut init = S {
            i: 5 as std::ffi::c_int,
        };
        init
    }
};
pub const PARENS: std::ffi::c_int = unsafe { NESTED_INT * (LITERAL_CHAR + true_0) };
pub const PTR_ARITHMETIC: *const std::ffi::c_char = unsafe {
    LITERAL_STR
        .as_ptr()
        .offset(5 as std::ffi::c_int as isize)
        .offset(-(3 as std::ffi::c_int as isize))
};
pub const WIDENING_CAST: std::ffi::c_int = unsafe { LITERAL_INT };
pub const CONVERSION_CAST: std::ffi::c_int = unsafe { LITERAL_INT };
#[no_mangle]
pub unsafe extern "C" fn local_muts() {
    let mut literal_int: std::ffi::c_int = LITERAL_INT;
    let mut literal_bool: bool = LITERAL_BOOL != 0;
    let mut literal_float: std::ffi::c_float = LITERAL_FLOAT as std::ffi::c_float;
    let mut literal_char: std::ffi::c_char = LITERAL_CHAR as std::ffi::c_char;
    let mut literal_str_ptr: *const std::ffi::c_char = LITERAL_STR.as_ptr();
    let mut literal_str: [std::ffi::c_char; 6] = LITERAL_STR;
    let mut literal_array: [std::ffi::c_int; 3] = [
        1 as std::ffi::c_int,
        2 as std::ffi::c_int,
        3 as std::ffi::c_int,
    ];
    let mut literal_struct: S = LITERAL_STRUCT;
    let mut nested_int: std::ffi::c_int = NESTED_INT;
    let mut nested_bool: bool = NESTED_BOOL != 0;
    let mut nested_float: std::ffi::c_float = NESTED_FLOAT as std::ffi::c_float;
    let mut nested_char: std::ffi::c_char = NESTED_CHAR as std::ffi::c_char;
    let mut nested_str_ptr: *const std::ffi::c_char = NESTED_STR.as_ptr();
    let mut nested_str: [std::ffi::c_char; 6] = NESTED_STR;
    let mut nested_array: [std::ffi::c_int; 3] = [
        1 as std::ffi::c_int,
        2 as std::ffi::c_int,
        3 as std::ffi::c_int,
    ];
    let mut nested_struct: S = NESTED_STRUCT;
    let mut int_arithmetic: std::ffi::c_int = NESTED_INT + LITERAL_INT + 1 as std::ffi::c_int;
    let mut mixed_arithmetic: std::ffi::c_float =
        (LITERAL_INT as std::ffi::c_double + NESTED_FLOAT * LITERAL_CHAR as std::ffi::c_double
            - true_0 as std::ffi::c_double) as std::ffi::c_float;
    let mut parens: std::ffi::c_int = PARENS;
    let mut ptr_arithmetic: *const std::ffi::c_char = PTR_ARITHMETIC;
    let mut widening_cast: std::ffi::c_ulonglong = WIDENING_CAST as std::ffi::c_ulonglong;
    let mut narrowing_cast: std::ffi::c_char = LITERAL_INT as std::ffi::c_char;
    let mut conversion_cast: std::ffi::c_double = CONVERSION_CAST as std::ffi::c_double;
    let mut indexing: std::ffi::c_char =
        (*::core::mem::transmute::<&[u8; 6], &[std::ffi::c_char; 6]>(b"hello\0"))
            [LITERAL_FLOAT as std::ffi::c_int as usize];
    let mut str_concatenation_ptr: *const std::ffi::c_char =
        b"hello hello world\0" as *const u8 as *const std::ffi::c_char;
    let mut str_concatenation: [std::ffi::c_char; 18] =
        *::core::mem::transmute::<&[u8; 18], &mut [std::ffi::c_char; 18]>(b"hello hello world\0");
    let mut builtin: std::ffi::c_int = (LITERAL_INT as std::ffi::c_uint).leading_zeros() as i32;
    let mut ref_indexing: *const std::ffi::c_char = &*NESTED_STR
        .as_ptr()
        .offset(LITERAL_FLOAT as std::ffi::c_int as isize)
        as *const std::ffi::c_char;
    let mut ref_struct: *const S = &mut LITERAL_STRUCT as *mut S;
    let mut ternary: std::ffi::c_int = if LITERAL_BOOL != 0 {
        1 as std::ffi::c_int
    } else {
        2 as std::ffi::c_int
    };
    let mut member: std::ffi::c_int = LITERAL_STRUCT.i;
}
#[no_mangle]
pub unsafe extern "C" fn local_consts() {
    let literal_int: std::ffi::c_int = LITERAL_INT;
    let literal_bool: bool = LITERAL_BOOL != 0;
    let literal_float: std::ffi::c_float = LITERAL_FLOAT as std::ffi::c_float;
    let literal_char: std::ffi::c_char = LITERAL_CHAR as std::ffi::c_char;
    let literal_str_ptr: *const std::ffi::c_char = LITERAL_STR.as_ptr();
    let literal_str: [std::ffi::c_char; 6] = LITERAL_STR;
    let literal_array: [std::ffi::c_int; 3] = [
        1 as std::ffi::c_int,
        2 as std::ffi::c_int,
        3 as std::ffi::c_int,
    ];
    let literal_struct: S = LITERAL_STRUCT;
    let nested_int: std::ffi::c_int = NESTED_INT;
    let nested_bool: bool = NESTED_BOOL != 0;
    let nested_float: std::ffi::c_float = NESTED_FLOAT as std::ffi::c_float;
    let nested_char: std::ffi::c_char = NESTED_CHAR as std::ffi::c_char;
    let nested_str_ptr: *const std::ffi::c_char = NESTED_STR.as_ptr();
    let nested_str: [std::ffi::c_char; 6] = NESTED_STR;
    let nested_array: [std::ffi::c_int; 3] = [
        1 as std::ffi::c_int,
        2 as std::ffi::c_int,
        3 as std::ffi::c_int,
    ];
    let nested_struct: S = NESTED_STRUCT;
    let int_arithmetic: std::ffi::c_int = NESTED_INT + LITERAL_INT + 1 as std::ffi::c_int;
    let mixed_arithmetic: std::ffi::c_float =
        (LITERAL_INT as std::ffi::c_double + NESTED_FLOAT * LITERAL_CHAR as std::ffi::c_double
            - true_0 as std::ffi::c_double) as std::ffi::c_float;
    let parens: std::ffi::c_int = PARENS;
    let ptr_arithmetic: *const std::ffi::c_char = PTR_ARITHMETIC;
    let widening_cast: std::ffi::c_ulonglong = WIDENING_CAST as std::ffi::c_ulonglong;
    let narrowing_cast: std::ffi::c_char = LITERAL_INT as std::ffi::c_char;
    let conversion_cast: std::ffi::c_double = CONVERSION_CAST as std::ffi::c_double;
    let indexing: std::ffi::c_char =
        (*::core::mem::transmute::<&[u8; 6], &[std::ffi::c_char; 6]>(b"hello\0"))
            [LITERAL_FLOAT as std::ffi::c_int as usize];
    let str_concatenation_ptr: *const std::ffi::c_char =
        b"hello hello world\0" as *const u8 as *const std::ffi::c_char;
    let str_concatenation: [std::ffi::c_char; 18] =
        *::core::mem::transmute::<&[u8; 18], &[std::ffi::c_char; 18]>(b"hello hello world\0");
    let builtin: std::ffi::c_int = (LITERAL_INT as std::ffi::c_uint).leading_zeros() as i32;
    let ref_indexing: *const std::ffi::c_char = &*NESTED_STR
        .as_ptr()
        .offset(LITERAL_FLOAT as std::ffi::c_int as isize)
        as *const std::ffi::c_char;
    let ref_struct: *const S = &mut LITERAL_STRUCT as *mut S;
    let ternary: std::ffi::c_int = if LITERAL_BOOL != 0 {
        1 as std::ffi::c_int
    } else {
        2 as std::ffi::c_int
    };
    let member: std::ffi::c_int = LITERAL_STRUCT.i;
}
static mut global_static_const_literal_int: std::ffi::c_int = LITERAL_INT;
static mut global_static_const_literal_bool: bool = LITERAL_BOOL != 0;
static mut global_static_const_literal_float: std::ffi::c_float =
    LITERAL_FLOAT as std::ffi::c_float;
static mut global_static_const_literal_char: std::ffi::c_char = LITERAL_CHAR as std::ffi::c_char;
static mut global_static_const_literal_str_ptr: *const std::ffi::c_char = LITERAL_STR.as_ptr();
static mut global_static_const_literal_str: [std::ffi::c_char; 6] = LITERAL_STR;
static mut global_static_const_literal_array: [std::ffi::c_int; 3] = [
    1 as std::ffi::c_int,
    2 as std::ffi::c_int,
    3 as std::ffi::c_int,
];
static mut global_static_const_literal_struct: S = LITERAL_STRUCT;
static mut global_static_const_nested_int: std::ffi::c_int = NESTED_INT;
static mut global_static_const_nested_bool: bool = NESTED_BOOL != 0;
static mut global_static_const_nested_float: std::ffi::c_float = NESTED_FLOAT as std::ffi::c_float;
static mut global_static_const_nested_char: std::ffi::c_char = NESTED_CHAR as std::ffi::c_char;
static mut global_static_const_nested_str_ptr: *const std::ffi::c_char = NESTED_STR.as_ptr();
static mut global_static_const_nested_str: [std::ffi::c_char; 6] = NESTED_STR;
static mut global_static_const_nested_array: [std::ffi::c_int; 3] = [
    1 as std::ffi::c_int,
    2 as std::ffi::c_int,
    3 as std::ffi::c_int,
];
static mut global_static_const_nested_struct: S = NESTED_STRUCT;
static mut global_static_const_int_arithmetic: std::ffi::c_int =
    NESTED_INT + LITERAL_INT + 1 as std::ffi::c_int;
static mut global_static_const_mixed_arithmetic: std::ffi::c_float =
    (LITERAL_INT as std::ffi::c_double + NESTED_FLOAT * LITERAL_CHAR as std::ffi::c_double
        - true_0 as std::ffi::c_double) as std::ffi::c_float;
static mut global_static_const_parens: std::ffi::c_int = PARENS;
static mut global_static_const_ptr_arithmetic: *const std::ffi::c_char =
    0 as *const std::ffi::c_char;
static mut global_static_const_widening_cast: std::ffi::c_ulonglong =
    WIDENING_CAST as std::ffi::c_ulonglong;
static mut global_static_const_narrowing_cast: std::ffi::c_char = LITERAL_INT as std::ffi::c_char;
static mut global_static_const_conversion_cast: std::ffi::c_double =
    CONVERSION_CAST as std::ffi::c_double;
static mut global_static_const_indexing: std::ffi::c_char = 0;
static mut global_static_const_str_concatenation_ptr: *const std::ffi::c_char =
    b"hello hello world\0" as *const u8 as *const std::ffi::c_char;
static mut global_static_const_str_concatenation: [std::ffi::c_char; 18] = unsafe {
    *::core::mem::transmute::<&[u8; 18], &[std::ffi::c_char; 18]>(b"hello hello world\0")
};
static mut global_static_const_builtin: std::ffi::c_int =
    (LITERAL_INT as std::ffi::c_uint).leading_zeros() as i32;
static mut global_static_const_ref_indexing: *const std::ffi::c_char = 0 as *const std::ffi::c_char;
static mut global_static_const_ref_struct: *const S = &LITERAL_STRUCT as *const S as *mut S;
static mut global_static_const_ternary: std::ffi::c_int = 0;
static mut global_static_const_member: std::ffi::c_int = 0;
#[no_mangle]
pub unsafe extern "C" fn global_static_consts() {}
#[no_mangle]
pub static mut global_const_literal_int: std::ffi::c_int = LITERAL_INT;
#[no_mangle]
pub static mut global_const_literal_bool: bool = LITERAL_BOOL != 0;
#[no_mangle]
pub static mut global_const_literal_float: std::ffi::c_float = LITERAL_FLOAT as std::ffi::c_float;
#[no_mangle]
pub static mut global_const_literal_char: std::ffi::c_char = LITERAL_CHAR as std::ffi::c_char;
#[no_mangle]
pub static mut global_const_literal_str_ptr: *const std::ffi::c_char = LITERAL_STR.as_ptr();
#[no_mangle]
pub static mut global_const_literal_str: [std::ffi::c_char; 6] = LITERAL_STR;
#[no_mangle]
pub static mut global_const_literal_array: [std::ffi::c_int; 3] = [
    1 as std::ffi::c_int,
    2 as std::ffi::c_int,
    3 as std::ffi::c_int,
];
#[no_mangle]
pub static mut global_const_literal_struct: S = LITERAL_STRUCT;
#[no_mangle]
pub static mut global_const_nested_int: std::ffi::c_int = NESTED_INT;
#[no_mangle]
pub static mut global_const_nested_bool: bool = NESTED_BOOL != 0;
#[no_mangle]
pub static mut global_const_nested_float: std::ffi::c_float = NESTED_FLOAT as std::ffi::c_float;
#[no_mangle]
pub static mut global_const_nested_char: std::ffi::c_char = NESTED_CHAR as std::ffi::c_char;
#[no_mangle]
pub static mut global_const_nested_str_ptr: *const std::ffi::c_char = NESTED_STR.as_ptr();
#[no_mangle]
pub static mut global_const_nested_str: [std::ffi::c_char; 6] = NESTED_STR;
#[no_mangle]
pub static mut global_const_nested_array: [std::ffi::c_int; 3] = [
    1 as std::ffi::c_int,
    2 as std::ffi::c_int,
    3 as std::ffi::c_int,
];
#[no_mangle]
pub static mut global_const_nested_struct: S = NESTED_STRUCT;
#[no_mangle]
pub static mut global_const_int_arithmetic: std::ffi::c_int =
    NESTED_INT + LITERAL_INT + 1 as std::ffi::c_int;
#[no_mangle]
pub static mut global_const_mixed_arithmetic: std::ffi::c_float =
    (LITERAL_INT as std::ffi::c_double + NESTED_FLOAT * LITERAL_CHAR as std::ffi::c_double
        - true_0 as std::ffi::c_double) as std::ffi::c_float;
#[no_mangle]
pub static mut global_const_parens: std::ffi::c_int = PARENS;
#[no_mangle]
pub static mut global_const_ptr_arithmetic: *const std::ffi::c_char = 0 as *const std::ffi::c_char;
#[no_mangle]
pub static mut global_const_widening_cast: std::ffi::c_ulonglong =
    WIDENING_CAST as std::ffi::c_ulonglong;
#[no_mangle]
pub static mut global_const_narrowing_cast: std::ffi::c_char = LITERAL_INT as std::ffi::c_char;
#[no_mangle]
pub static mut global_const_conversion_cast: std::ffi::c_double =
    CONVERSION_CAST as std::ffi::c_double;
#[no_mangle]
pub static mut global_const_indexing: std::ffi::c_char = 0;
#[no_mangle]
pub static mut global_const_str_concatenation_ptr: *const std::ffi::c_char =
    b"hello hello world\0" as *const u8 as *const std::ffi::c_char;
#[no_mangle]
pub static mut global_const_str_concatenation: [std::ffi::c_char; 18] = unsafe {
    *::core::mem::transmute::<&[u8; 18], &[std::ffi::c_char; 18]>(b"hello hello world\0")
};
#[no_mangle]
pub static mut global_const_builtin: std::ffi::c_int =
    (LITERAL_INT as std::ffi::c_uint).leading_zeros() as i32;
#[no_mangle]
pub static mut global_const_ref_indexing: *const std::ffi::c_char = 0 as *const std::ffi::c_char;
#[no_mangle]
pub static mut global_const_ref_struct: *const S = &LITERAL_STRUCT as *const S as *mut S;
#[no_mangle]
pub static mut global_const_ternary: std::ffi::c_int = 0;
#[no_mangle]
pub static mut global_const_member: std::ffi::c_int = 0;
#[no_mangle]
pub unsafe extern "C" fn test_fn_macro(mut x: std::ffi::c_int) -> std::ffi::c_int {
    return x * x;
}
pub const TEST_CONST1: std::ffi::c_int = unsafe { 1 as std::ffi::c_int };
pub const TEST_NESTED: std::ffi::c_int = unsafe { 2 as std::ffi::c_int };
pub const TEST_CONST2: std::ffi::c_int = unsafe { TEST_NESTED };
pub const TEST_PARENS: std::ffi::c_int =
    unsafe { (TEST_CONST2 + 1 as std::ffi::c_int) * 3 as std::ffi::c_int };
#[no_mangle]
pub unsafe extern "C" fn reference_define() -> std::ffi::c_int {
    let mut x: std::ffi::c_int = TEST_CONST1;
    x += TEST_CONST2;
    if (3 as std::ffi::c_int) < TEST_PARENS {
        x += TEST_PARENS;
    }
    return x;
}
#[no_mangle]
pub static mut fns: fn_ptrs = {
    let mut init = fn_ptrs {
        v: 0 as *const std::ffi::c_void as *mut std::ffi::c_void,
        fn1: None,
        fn2: None,
    };
    init
};
#[no_mangle]
pub static mut p: *const fn_ptrs = unsafe { &fns as *const fn_ptrs };
pub const ZSTD_WINDOWLOG_MAX_32: std::ffi::c_int = unsafe { 30 as std::ffi::c_int };
pub const ZSTD_WINDOWLOG_MAX_64: std::ffi::c_int = unsafe { 31 as std::ffi::c_int };
#[no_mangle]
pub unsafe extern "C" fn test_zstd() -> U64 {
    return (if ::core::mem::size_of::<zstd_platform_dependent_type>() as std::ffi::c_ulong
        == 4 as std::ffi::c_ulong
    {
        ZSTD_WINDOWLOG_MAX_32
    } else {
        ZSTD_WINDOWLOG_MAX_64
    }) as U64;
}
#[no_mangle]
pub unsafe extern "C" fn stmt_expr_inc() -> std::ffi::c_int {
    let mut a: std::ffi::c_int = 0 as std::ffi::c_int;
    let mut b: *mut std::ffi::c_int = &mut a;
    ({
        *b += 1;
        *b;
        *b;
        *b
    });
    return ({
        *b += 1;
        *b;
        *b
    });
}
#[no_mangle]
pub unsafe extern "C" fn test_switch(mut x: std::ffi::c_int) -> std::ffi::c_int {
    match x {
        TEST_CONST1 => return 10 as std::ffi::c_int,
        TEST_NESTED => return 20 as std::ffi::c_int,
        _ => {}
    }
    return 0 as std::ffi::c_int;
}
pub const silk_int16_MIN: std::ffi::c_int = unsafe { 0x8000 as std::ffi::c_int };
#[no_mangle]
pub unsafe extern "C" fn test_silk_int16_MIN() -> std::ffi::c_int {
    let mut _null: std::ffi::c_char =
        (*::core::mem::transmute::<&[u8; 1], &[std::ffi::c_char; 1]>(b"\0"))[(silk_int16_MIN
            as std::ffi::c_short
            as std::ffi::c_int
            + 0x8000 as std::ffi::c_int)
            as usize];
    return silk_int16_MIN;
}
#[no_mangle]
pub unsafe extern "C" fn use_extern_value() -> std::ffi::c_int {
    return extern_fn();
}
#[no_mangle]
pub unsafe extern "C" fn local_fn() -> std::ffi::c_int {
    return 1234 as std::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn use_local_value() -> std::ffi::c_int {
    return local_fn();
}
#[no_mangle]
pub unsafe extern "C" fn use_portable_type(mut len: uintptr_t) -> bool {
    return len <= (UINTPTR_MAX as uintptr_t).wrapping_div(2 as uintptr_t);
}
#[no_mangle]
pub unsafe extern "C" fn errno_is_error() -> bool {
    return *__errno_location() != 0 as std::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn size_of_const() -> std::ffi::c_int {
    let mut a: [std::ffi::c_int; 10] = [0; 10];
    return SIZE as std::ffi::c_int;
}
pub const SIZE: std::ffi::c_ulong = unsafe { ::core::mem::size_of::<[std::ffi::c_int; 10]>() };
unsafe extern "C" fn run_static_initializers() {
    global_static_const_ptr_arithmetic = PTR_ARITHMETIC;
    global_static_const_indexing =
        (*::core::mem::transmute::<&[u8; 6], &[std::ffi::c_char; 6]>(b"hello\0"))
            [LITERAL_FLOAT as std::ffi::c_int as usize];
    global_static_const_ref_indexing = &*NESTED_STR
        .as_ptr()
        .offset(LITERAL_FLOAT as std::ffi::c_int as isize)
        as *const std::ffi::c_char;
    global_static_const_ternary = if LITERAL_BOOL != 0 {
        1 as std::ffi::c_int
    } else {
        2 as std::ffi::c_int
    };
    global_static_const_member = LITERAL_STRUCT.i;
    global_const_ptr_arithmetic = PTR_ARITHMETIC;
    global_const_indexing =
        (*::core::mem::transmute::<&[u8; 6], &[std::ffi::c_char; 6]>(b"hello\0"))
            [LITERAL_FLOAT as std::ffi::c_int as usize];
    global_const_ref_indexing = &*NESTED_STR
        .as_ptr()
        .offset(LITERAL_FLOAT as std::ffi::c_int as isize)
        as *const std::ffi::c_char;
    global_const_ternary = if LITERAL_BOOL != 0 {
        1 as std::ffi::c_int
    } else {
        2 as std::ffi::c_int
    };
    global_const_member = LITERAL_STRUCT.i;
}
#[used]
#[cfg_attr(target_os = "linux", link_section = ".init_array")]
#[cfg_attr(target_os = "windows", link_section = ".CRT$XIB")]
#[cfg_attr(target_os = "macos", link_section = "__DATA,__mod_init_func")]
static INIT_ARRAY: [unsafe extern "C" fn(); 1] = [run_static_initializers];
